# astro-probe

./: .gitignore  Cargo.toml  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md
.cargo/: config.toml
.github/workflows/: release.yml
artifacts/: audit_report_M2.md  audit_report_M3.md  audit_report_M4.md  evaluation_report_M2.md  evaluation_report_M3.md  evaluation_report_M4.md
crates/astro-probe-core/: Cargo.toml
crates/astro-probe-core/src/: cg.rs  dfg.rs  facts.rs  lib.rs  query.rs  traits.rs
crates/astro-probe-db/: Cargo.toml
crates/astro-probe-db/src/: lib.rs
crates/astro-probe-java/: Cargo.toml
crates/astro-probe-java/src/: di.rs  event.rs  jar.rs  lib.rs  parser.rs  router.rs
crates/astro-probe-server/: Cargo.toml
crates/astro-probe-server/src/: lib.rs  main.rs
crates/astro-probe-server/src/api/: handlers.rs  router.rs
crates/astro-probe-server/src/kernel/: manager.rs  mod.rs  workspace.rs
crates/astro-probe-server/src/mcp/: mod.rs  schema.rs  server.rs
crates/astro-probe-tests/: Cargo.toml
crates/astro-probe-tests/src/: lib.rs
crates/astro-probe-tests/tests/: challenger_stress_tests.rs  integration.rs  milestone4_validation.rs  perf_benchmark.rs  scratch.rs  validation_tests.rs
crates/cafebabe/: .cargo_vcs_info.json  Cargo.toml
crates/cafebabe/examples/: publicapi.rs
crates/cafebabe/src/: attributes.rs  constant_pool.rs  lib.rs
docs/: development.md  usage.md  zed-plugin.md
src/: lib.rs  main.rs
src/analyzer/: cg.rs  dfg.rs  di.rs  jar.rs  mod.rs
src/api/: handlers.rs  router.rs
src/db/: connection.rs  mod.rs
src/kernel/: manager.rs  mod.rs  workspace.rs
src/mcp/: mod.rs  server.rs
src/parser/: java.rs  mod.rs
test-samples/complex-spring/: pom.xml
test-samples/complex-spring/src/main/java/com/example/complex/: ComplexSpringApplication.java
test-samples/complex-spring/src/main/java/com/example/complex/async/: EmailService.java  EmailServiceImpl.java
test-samples/complex-spring/src/main/java/com/example/complex/callback/: OrderProcessingCallback.java  ProcessingCallback.java
test-samples/complex-spring/src/main/java/com/example/complex/config/: AppConfig.java  AsyncConfig.java
test-samples/complex-spring/src/main/java/com/example/complex/controller/: OrderController.java  ProductController.java  UserController.java
test-samples/complex-spring/src/main/java/com/example/complex/dto/: NotificationDto.java  OrderDto.java  OrderItemDto.java  ProductDto.java  UserDto.java
test-samples/complex-spring/src/main/java/com/example/complex/event/: OrderCreatedEvent.java  OrderStatusChangedEvent.java  StockDepletedEvent.java
test-samples/complex-spring/src/main/java/com/example/complex/model/: Order.java  (+4 more)
test-samples/complex-spring/src/main/resources/: application.properties
test-samples/medium-spring/: pom.xml
test-samples/medium-spring/src/main/java/com/example/medium/: MediumApplication.java
test-samples/medium-spring/src/main/resources/: application.properties
test-samples/simple-spring/: pom.xml
test-samples/simple-spring/src/main/java/com/example/simple/: SimpleApplication.java
visualizers/: package-lock.json  package.json  run-e2e.ps1
visualizers/e2e-tests/: README.md  challenger-verify.js  deep-link-lsp.test.js  e2e.test.js  mock-middle-layer.js  negative-tests.js  package-lock.json  package.json  test-runner.js
visualizers/frontend/: copy-monaco.cjs  index.html  package-lock.json  package.json  vite.config.ts
visualizers/frontend/src/: App.tsx
visualizers/frontend/src/components/: CodeViewer.tsx  ErrorBoundary.tsx  GraphVisualizer.tsx
visualizers/server/: .env  challenge-tests.js  challenger-verification.js  package-lock.json  package.json  pure-traversal-test.js  scratch_verification.js  verify-extended.js  verify-resolver.js
visualizers/server/src/: app.js  index.js
visualizers/server/src/routes/: file.js  proxy.js  symbol.js
visualizers/server/src/services/: symbolResolver.js
visualizers/zed-extension/: Cargo.toml  README.md  extension.toml  lsp-adapter.js  package-lock.json  package.json
visualizers/zed-extension/keymaps/: default.json
visualizers/zed-extension/src/: lib.rs
(+69 files in other folders)
