[workspace]
members = [
    ".",
    "tests/e2e"
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8"
clap = { version = "4.5.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.27", features = ["json"] }
tempfile = "3.10.1"
zip = "2.1.0"
cafebabe = "0.3.1"

[package]
name = "astro-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
cafebabe = { workspace = true }

