[package]
name = "astro-probe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
cafebabe = { workspace = true }

astro-probe-core = { path = "../astro-probe-core" }
astro-probe-db = { path = "../astro-probe-db" }
astro-probe-java = { path = "../astro-probe-java" }
